crates/moire-source-context/src/snapshots/moire_source_context__tests__async_fn_multiline_params.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# async fn establish_as_acceptor(&mut self, settings, metadata) -> Result<Handle>
# scope 6..9

   6  |     let handle = session
   7  |         .establish(self.root_settings, self.metadata)
   8  |         .await?;
   9  |     Ok(handle)
