crates/moire-source-context/src/snapshots/moire_source_context__tests__compact_keeps_target_statement_neighbors.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# 
(no result)
