crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_inside_closure.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# 
(no result)
